Add a script to store download data in `hugo.yml`
We will use that information in the download pages.

This script is a transmogrified version of
`app/services/download_service.rb`.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/hugo.yml
+++ b/hugo.yml
@@ -18,3 +18,29 @@ params:
   latest_version: 2.45.2
   latest_relnote_url: https://raw.github.com/git/git/master/Documentation/RelNotes/2.45.2.txt
   latest_release_date: '2024-05-31'
+  macos_installer:
+    url: https://sourceforge.net/projects/git-osx-installer/files/git-2.33.0-intel-universal-mavericks.dmg/download?use_mirror=autoselect
+    version: 2.33.0
+    release_date: '2021-08-30'
+    filename: git-2.33.0-intel-universal-mavericks.dmg
+  windows_installer:
+    portable32:
+      filename: PortableGit-2.45.2-32-bit.7z.exe
+      release_date: '2024-06-03'
+      version: 2.45.2
+      url: https://github.com/git-for-windows/git/releases/download/v2.45.2.windows.1/PortableGit-2.45.2-32-bit.7z.exe
+    portable64:
+      filename: PortableGit-2.45.2-64-bit.7z.exe
+      release_date: '2024-06-03'
+      version: 2.45.2
+      url: https://github.com/git-for-windows/git/releases/download/v2.45.2.windows.1/PortableGit-2.45.2-64-bit.7z.exe
+    installer32:
+      filename: Git-2.45.2-32-bit.exe
+      release_date: '2024-06-03'
+      version: 2.45.2
+      url: https://github.com/git-for-windows/git/releases/download/v2.45.2.windows.1/Git-2.45.2-32-bit.exe
+    installer64:
+      filename: Git-2.45.2-64-bit.exe
+      release_date: '2024-06-03'
+      version: 2.45.2
+      url: https://github.com/git-for-windows/git/releases/download/v2.45.2.windows.1/Git-2.45.2-64-bit.exe
