--- a/hugo.yml
+++ b/hugo.yml
@@ -27,6 +27,10 @@ module:
     target: content/book
   - source: external/book/static/book
     target: static/book
+  - source: external/docs/data
+    target: data
+  - source: external/docs/content
+    target: content
 params:
   hugo_version: 0.131.0
   pagefind_version: 1.1.1-alpha.3
