--- a/hugo.yml
+++ b/hugo.yml
@@ -15,6 +15,7 @@ markup:
       unsafe: true
 params:
   hugo_version: 0.131.0
+  pagefind_version: 1.1.1-alpha.3
   latest_version: 2.45.2
   latest_relnote_url: https://raw.github.com/git/git/master/Documentation/RelNotes/2.45.2.txt
   latest_release_date: '2024-05-31'
