deploy: check for broken links
Broken links are quite an annoyance for readers, and at least for links
that point to pages within the same static website, there are tools to
help identify those.

One such tool is called `lychee`. It has already a number of very useful
options and even sports a GitHub Action for easy integration into GitHub
workflows.

To accommodate the migration of https://git-scm.com/ from a Rails App to
a static site generated using Hugo, lychee was taught the trick needed
to support checking links in a static website with "pretty URLs" (i.e.
URLs lacking the `.html` file extension even though the files backing
those URLs do have that extension, something GitHub Pages supports).

With this mode, the automation that deploys https://git-scm.com/ can
make use of that link checker.

Seeing as broken links often originate from repositories outside of
https://github.com/git/git-scm.com's control, rather than failing
deployment when broken links are detected, let's follow the "best
effort" strategy and open a ticket about the broken links while still
letting the deployments complete.

In PR builds, links are also checked, and broken links will let them
fail.

While it was tempting to use a convenient GitHub Action like
`peter-evans/create-issue-from-file` to open the GitHub issue, there is
no readily-available Action to either open, update, or update & close
such a ticket, depending on the outcome of the link check and whether
such a ticket exists already and is open. Therefore, I opted for a more
verbose (and much more powerful) `actions/github-script` step to perform
this part of the job.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/update-download-data.yml
+++ b/.github/workflows/update-download-data.yml
@@ -13,6 +13,7 @@ jobs:
       contents: write # to push changes (if any)
       pages: write # to deploy to GitHub Pages
       id-token: write # to verify that the deployment source is legit
+      issues: write # to open tickets upon broken links
     environment:
       name: github-pages
       url: ${{ steps.deploy.outputs.url }}
