--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
     permissions:
       pages: write # to deploy to GitHub Pages
       id-token: write # to verify that the deployment source is legit
+      issues: write # to open tickets upon broken links
     environment:
       name: github-pages
       url: ${{ steps.deploy.outputs.url }}
